# audiodecoder.snesapu

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.snesapu/: addon.xml  addon.xml.in
audiodecoder.snesapu/resources/language/resource.language.af_za/: strings.po
audiodecoder.snesapu/resources/language/resource.language.am_et/: strings.po
audiodecoder.snesapu/resources/language/resource.language.ar_sa/: strings.po
audiodecoder.snesapu/resources/language/resource.language.ast_es/: strings.po
audiodecoder.snesapu/resources/language/resource.language.az_az/: strings.po
audiodecoder.snesapu/resources/language/resource.language.be_by/: strings.po
audiodecoder.snesapu/resources/language/resource.language.bg_bg/: strings.po
audiodecoder.snesapu/resources/language/resource.language.bs_ba/: strings.po
audiodecoder.snesapu/resources/language/resource.language.ca_es/: strings.po
audiodecoder.snesapu/resources/language/resource.language.cs_cz/: strings.po
audiodecoder.snesapu/resources/language/resource.language.cy_gb/: strings.po
audiodecoder.snesapu/resources/language/resource.language.da_dk/: strings.po
audiodecoder.snesapu/resources/language/resource.language.de_de/: strings.po
audiodecoder.snesapu/resources/language/resource.language.el_gr/: strings.po
audiodecoder.snesapu/resources/language/resource.language.en_au/: strings.po
audiodecoder.snesapu/resources/language/resource.language.en_gb/: strings.po
audiodecoder.snesapu/resources/language/resource.language.en_nz/: strings.po
audiodecoder.snesapu/resources/language/resource.language.en_us/: strings.po
audiodecoder.snesapu/resources/language/resource.language.eo/: strings.po
audiodecoder.snesapu/resources/language/resource.language.es_ar/: strings.po
audiodecoder.snesapu/resources/language/resource.language.es_es/: strings.po
audiodecoder.snesapu/resources/language/resource.language.es_mx/: strings.po
audiodecoder.snesapu/resources/language/resource.language.et_ee/: strings.po
audiodecoder.snesapu/resources/language/resource.language.eu_es/: strings.po
audiodecoder.snesapu/resources/language/resource.language.fa_af/: strings.po
audiodecoder.snesapu/resources/language/resource.language.fi_fi/: strings.po
audiodecoder.snesapu/resources/language/resource.language.fo_fo/: strings.po
audiodecoder.snesapu/resources/language/resource.language.fr_ca/: strings.po
audiodecoder.snesapu/resources/language/resource.language.fr_fr/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-libid666-note.txt  kodi-snes_spc-note.txt
lib/libid666/: CMakeLists.txt  Makefile  README.md  attr.h  id666-dump.c  id666-gme-test.c  id666.c  id666.h
lib/snes_spc/: CMakeLists.txt
src/: SPCCodec.cpp  SPCCodec.h
(+51 files in other folders)
